--- a/.github/workflows/package-test.yml
+++ b/.github/workflows/package-test.yml
@@ -3,30 +3,28 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   Unit-Tests:
-    timeout-minutes: 30
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
-        os: [macos-latest]
-        python-version: ["3.8"]
+        python: [3.7, 3.8, 3.9, 3.11]
     steps:
-      - uses: actions/checkout@v2
-      - name: Install Python ${{ matrix.python-version }}
+      - name: Checkout repo
+        uses: actions/checkout@v2
+
+      - name: Setup python
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.python }}
+
       - name: Setup dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest
+          pip install python-dotenv
 
       - name: Run Tests
         env:
