--- a/.github/workflows/testpypi-publish.yml
+++ b/.github/workflows/testpypi-publish.yml
@@ -31,4 +31,4 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
         run: |
           python setup.py sdist bdist_wheel
-          twine upload testpypi dist/*
+          twine upload --repository testpypi dist/*
