--- a/.github/workflows/package-test.yml
+++ b/.github/workflows/package-test.yml
@@ -10,6 +10,7 @@ jobs:
     strategy:
       matrix:
         python: [3.7, 3.8, 3.9, 3.11]
+        fail-fast: true
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
