--- a/.github/workflows/package-test.yml
+++ b/.github/workflows/package-test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python: [3.7, 3.8, 3.9, 3.11]
+        python: [3.7]
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
